Fixed ur shit... AGAIN!

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-
-
+    android:layout_height="match_parent"
+    android:gravity="center_horizontal"
+    >
 
     <ImageView
         android:id="@+id/imageView"
@@ -14,123 +13,132 @@
         android:src="@drawable/login_background"
         />
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
 
-    <TextView
-        android:id="@+id/textView16"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginLeft="130dp"
-        android:layout_marginTop="125dp"
-        android:text="Pick"
-        android:textSize="95dp"
-        android:textColor="@color/primaryTextColor"
-         />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_centerHorizontal="true"
+                android:layout_above= "@+id/login_username"
+                android:layout_marginBottom="60dp">
 
-    <TextView
+                <TextView
+                    android:id="@+id/textView17"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="u"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="95sp" />
 
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="u"
-        android:textSize="95dp"
-        android:layout_marginLeft="80dp"
-        android:layout_marginTop="125dp"
-        android:textColor="@color/colorAccent"
-        />
+                <TextView
+                    android:id="@+id/textView16"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_horizontal"
+                    android:text="Pick"
+                    android:textSize="95dp"
+                    android:textColor="@color/primaryTextColor"
+                     />
+            </LinearLayout>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Username"
-        android:textSize="20dp"
-        android:textColor="#cfcfcf"
-        android:gravity="center_horizontal"
-        android:layout_marginRight="150dp"
-        android:layout_marginTop="290dp"
-        android:textStyle="bold"
-        />
+            <EditText
+                android:id="@+id/login_username"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_above="@+id/login_password"
+                android:layout_marginBottom="16dp"
+                android:layout_marginLeft="@dimen/login_sidemargin"
+                android:layout_marginRight="@dimen/login_sidemargin"
+                android:background="@drawable/rectangle"
+                android:gravity="left"
+                android:hint="Username"
+                android:inputType="textNoSuggestions"
+                android:paddingLeft="16dp"
+                android:textColor="#cfcfcf"
+                android:textColorHint="#cfcfcf"
+                android:textSize="18sp" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Password"
-        android:textSize="20dp"
-        android:textColor="#cfcfcf"
-        android:gravity="center_horizontal"
-        android:layout_marginRight="150dp"
-        android:layout_marginTop="350dp"
-        android:textStyle="bold"
-        />
+            <EditText
+                android:id="@+id/login_password"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_above="@+id/textView19"
+                android:layout_marginBottom="32dp"
+                android:layout_marginLeft="@dimen/login_sidemargin"
+                android:layout_marginRight="@dimen/login_sidemargin"
+                android:background="@drawable/rectangle"
+                android:gravity="left"
+                android:hint="Password"
+                android:inputType="textPassword"
+                android:paddingLeft="16dp"
+                android:textColor="#cfcfcf"
+                android:textColorHint="#cfcfcf"
+                android:textSize="18sp" />
 
-    <View
-        android:id="@+id/myRectangleView"
-        android:layout_width="350dp"
-        android:layout_height="40dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="280dp"
-        android:layout_marginRight="45dp"
-        android:background="@drawable/rectangle"/>
+            <TextView
+                android:id="@+id/textView19"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:gravity="center"
+                android:text="Login"
+                android:clickable="true"
+                android:onClick="login"
+                android:layout_marginLeft="@dimen/login_sidemargin"
+                android:layout_marginRight="@dimen/login_sidemargin"
+                android:layout_marginBottom="16dp"
+                android:textColor="#fff"
+                android:textSize="20sp"
+                android:background="@drawable/rectangle3"
+                android:textStyle="bold"
+                android:layout_above="@+id/textView18"
+                />
 
-    <View
-        android:id="@+id/myRectangleView2"
-        android:layout_width="350dp"
-        android:layout_height="40dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="340dp"
-        android:layout_marginRight="45dp"
-        android:background="@drawable/rectangle"/>
+            <TextView
+                android:id="@+id/textView18"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:gravity="center"
+                android:text="Register"
+                android:layout_marginLeft="@dimen/login_sidemargin"
+                android:layout_marginRight="@dimen/login_sidemargin"
+                android:textColor="#fff"
+                android:textSize="20sp"
+                android:background="@drawable/rectangle2"
+                android:textStyle="bold"
+                android:layout_above="@+id/googlefb_container"/>
 
-    <View
-        android:id="@+id/myRectangleView3"
-        android:layout_width="350dp"
-        android:layout_height="40dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="415dp"
-        android:layout_marginRight="45dp"
-        android:background="@drawable/rectangle3"/>
+            <LinearLayout
+                android:id="@+id/googlefb_container"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_centerHorizontal="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="16dp"
+                android:layout_marginTop="32dp">
 
-    <View
-        android:id="@+id/myRectangleView4"
-        android:layout_width="350dp"
-        android:layout_height="40dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="470dp"
-        android:layout_marginRight="45dp"
-        android:background="@drawable/rectangle2"/>
+                <ImageButton
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:background="@drawable/white_circle"
+                    android:layout_marginRight="32dp"
+                    android:src="@drawable/googleplus_logo"
+                    android:scaleType="fitXY"
+                    android:padding="10dp"/>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Login"
-        android:textSize="20dp"
-        android:textColor="#cfcfcf"
-        android:gravity="center_horizontal"
-        android:layout_marginTop="423dp"
-        android:textStyle="bold"
-        />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Register"
-        android:textSize="20dp"
-        android:textColor="#cfcfcf"
-        android:gravity="center_horizontal"
-        android:layout_marginTop="480dp"
-        android:textStyle="bold"
-        />
-
-
-
-
-
-
-
-
-
-
-
-
-</RelativeLayout>
+                <ImageButton
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:background="@drawable/white_circle"
+                    android:src="@drawable/facebook_logo"
+                    android:scaleType="fitXY"
+                    android:padding="10dp"/>
+            </LinearLayout>
+                </RelativeLayout>
+</FrameLayout>
 
