--- a/app/src/main/res/layout/activity_rating.xml
+++ b/app/src/main/res/layout/activity_rating.xml
@@ -70,6 +70,12 @@
             android:layout_marginLeft="16dp"
             />
 
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_star_pressed"
+            />
+
 
     </RelativeLayout>
 
