--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,16 +21,17 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:layout_above="@+id/login_username"
                 android:layout_centerHorizontal="true"
-                android:layout_above= "@+id/login_username"
-                android:layout_marginBottom="60dp">
+                android:layout_marginBottom="40dp"
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/textView17"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
+                    android:fontFamily="serif"
                     android:text="u"
                     android:textColor="@color/colorAccent"
                     android:textSize="95sp" />
@@ -40,22 +41,22 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_gravity="center_horizontal"
+                    android:fontFamily="serif"
                     android:text="Pick"
-                    android:textSize="95dp"
                     android:textColor="@color/primaryTextColor"
-                     />
+                    android:textSize="95dp" />
             </LinearLayout>
 
             <EditText
                 android:id="@+id/login_username"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
+                android:layout_height="@dimen/login_box_height"
                 android:layout_above="@+id/login_password"
                 android:layout_marginBottom="16dp"
                 android:layout_marginLeft="@dimen/login_sidemargin"
                 android:layout_marginRight="@dimen/login_sidemargin"
                 android:background="@drawable/rectangle"
-                android:gravity="left"
+                android:gravity="left|center_vertical"
                 android:hint="Username"
                 android:inputType="textNoSuggestions"
                 android:paddingLeft="16dp"
@@ -66,15 +67,16 @@
             <EditText
                 android:id="@+id/login_password"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
+                android:layout_height="35dp"
                 android:layout_above="@+id/textView19"
-                android:layout_marginBottom="32dp"
+                android:layout_marginBottom="@dimen/login_box_height"
                 android:layout_marginLeft="@dimen/login_sidemargin"
                 android:layout_marginRight="@dimen/login_sidemargin"
                 android:background="@drawable/rectangle"
-                android:gravity="left"
+                android:gravity="left|center_vertical"
                 android:hint="Password"
                 android:inputType="textPassword"
+
                 android:paddingLeft="16dp"
                 android:textColor="#cfcfcf"
                 android:textColorHint="#cfcfcf"
@@ -83,8 +85,9 @@
             <TextView
                 android:id="@+id/textView19"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
+                android:layout_height="@dimen/login_box_height"
                 android:gravity="center"
+                android:foreground="?attr/selectableItemBackgroundBorderless"
                 android:text="Login"
                 android:clickable="true"
                 android:onClick="login"
@@ -101,7 +104,8 @@
             <TextView
                 android:id="@+id/textView18"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
+                android:foreground="?attr/selectableItemBackgroundBorderless"
+                android:layout_height="@dimen/login_box_height"
                 android:gravity="center"
                 android:text="Register"
                 android:layout_marginLeft="@dimen/login_sidemargin"
