--- a/app/src/main/res/layout/menu_item.xml
+++ b/app/src/main/res/layout/menu_item.xml
@@ -4,15 +4,19 @@
     android:layout_height="56dp">
 
     <ImageView
+        android:id="@+id/bar_item_thumbnail"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:id="@+id/bar_item_thumbnail"
-        android:layout_centerVertical="true"
         android:layout_alignParentStart="true"
-        android:src="@drawable/coffeethumbnail"
-        android:scaleType="fitXY"
+        android:layout_centerVertical="true"
         android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp" />
+        android:layout_marginRight="16dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:paddingLeft="7dp"
+        android:paddingRight="7dp"
+        android:background="@drawable/blue_circle"
+        android:src="@drawable/alcoholicthumbnail" />
 
     <TextView
         android:layout_width="wrap_content"
