--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -17,19 +17,17 @@
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
-       android:layout_marginLeft="36dp"
+       android:layout_marginLeft="@dimen/login_sidemargin"
        android:orientation="vertical"
-       android:layout_marginRight="36dp"
-       android:layout_marginTop="36dp"
+       android:layout_marginRight="@dimen/login_sidemargin"
        >
 
         <EditText
             android:id="@+id/register_emri"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="@dimen/login_box_height"
             android:background="@drawable/rectangle"
-            android:gravity="left"
-            android:layout_gravity="center"
+            android:gravity="left|center_vertical"
             android:hint="Emri"
             android:inputType="textNoSuggestions"
             android:paddingLeft="25dp"
@@ -40,10 +38,9 @@
         <EditText
             android:id="@+id/register_mbiemri"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="@dimen/login_box_height"
             android:background="@drawable/rectangle"
-            android:gravity="left"
-            android:layout_gravity="center"
+            android:gravity="left|center_vertical"
             android:layout_marginTop="16dp"
             android:hint="Mbiemri"
             android:inputType="textNoSuggestions"
@@ -55,10 +52,9 @@
        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
-           android:layout_height="30dp"
+           android:layout_height="@dimen/login_box_height"
            android:background="@drawable/rectangle"
-           android:gravity="left"
-           android:layout_gravity="center"
+           android:gravity="left|center_vertical"
            android:layout_marginTop="16dp"
            android:hint="Email"
            android:inputType="textNoSuggestions"
@@ -70,10 +66,9 @@
        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
-           android:layout_height="30dp"
+           android:layout_height="@dimen/login_box_height"
            android:background="@drawable/rectangle"
-           android:gravity="left"
-           android:layout_gravity="center"
+           android:gravity="left|center_vertical"
            android:layout_marginTop="16dp"
            android:hint="Password"
            android:inputType="textPassword"
@@ -85,16 +80,17 @@
        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
-           android:layout_height="30dp"
+           android:layout_height="@dimen/login_box_height"
            android:gravity="center"
-           android:text="Regjistrohu"
+           android:text="Register"
            android:layout_marginTop="32dp"
            android:clickable="true"
            android:textColor="#fff"
+           android:foreground="?attr/selectableItemBackgroundBorderless"
            android:textSize="20sp"
            android:background="@drawable/rectangle3"
            android:textStyle="bold"
-           android:layout_above="@+id/textView18"
+           android:onClick="register"
            />
    </LinearLayout>
 </FrameLayout>
