--- a/app/src/main/res/layout/bar_item.xml
+++ b/app/src/main/res/layout/bar_item.xml
@@ -29,8 +29,8 @@
                 android:id="@+id/bar_image"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-                android:scaleType="fitXY"
-                app:srcCompat="@drawable/barplaceholder1" />
+                android:background="#fdfdfd"
+                android:scaleType="fitXY" />
 
             <FrameLayout
                 android:layout_width="match_parent"
